[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/World/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/CustomViewportControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Datapacks/UI/CrotchCode/UI/MapLocPickerWidget.gd" type="Script" id=3]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("VBoxContainer/HBoxContainer/PanelContainer/Viewport")

[node name="MapLocPickerWidget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FloorList" type="ItemList" parent="VBoxContainer/HBoxContainer"]
margin_right = 159.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="CellList" type="ItemList" parent="VBoxContainer/HBoxContainer"]
margin_left = 163.0
margin_right = 481.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 485.0
margin_right = 1280.0
margin_bottom = 696.0
size_flags_horizontal = 3

[node name="Viewport" type="Viewport" parent="VBoxContainer/HBoxContainer/PanelContainer"]
size = Vector2( 1280, 680 )
handle_input_locally = false
hdr = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="World" parent="VBoxContainer/HBoxContainer/PanelContainer/Viewport" instance=ExtResource( 1 )]

[node name="CustomViewportControl" parent="VBoxContainer/HBoxContainer/PanelContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 788.0
margin_bottom = 689.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
viewportPath = NodePath("../Viewport")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 700.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="ConfirmButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 62.0
margin_bottom = 20.0
text = "Confirm"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 66.0
margin_right = 120.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/FloorList" to="." method="_on_FloorList_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/CellList" to="." method="_on_CellList_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]
